<resources>
    <string name="app_name">GameBacklog</string>
    <string name="action_settings">Settings</string>
    <string name="deviceText">DEVICE</string>
    <string name="gametitleText">GameTitle</string>
    <string name="statusText">STATUS</string>
    <string name="dateText">DATE</string>
    <string name="gameTitle">Title</string>
    <string name="device">Device</string>
    <string name="note">Notes</string>
    <string name="titlehint">Title</string>
    <string name="devicehint">Device</string>
    <string name="noteshint">Notes</string>
    <string name="statushint">Status</string>
    <string name="d_create">Create</string>
    <string name="d_update">Update</string>
    <string name="d_mode">Mode</string>
    <string name="d_game">Game</string>
</resources>
