<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/textViewDevice"
        android:layout_width="59dp"
        android:layout_height="25dp"
        android:layout_below="@+id/textViewTitle"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/deviceText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textViewNotes"
        android:layout_width="72dp"
        android:layout_height="23dp"
        android:layout_below="@+id/textViewTitle"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/textViewDevice"
        android:text="@string/dateText"
        app:layout_constraintStart_toEndOf="@+id/textViewDevice"
        app:layout_constraintTop_toBottomOf="@+id/textViewStatus" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="63dp"
        android:layout_height="19dp"
        android:layout_below="@+id/textViewTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toStartOf="@+id/textViewDevice"
        android:text="@string/statusText"
        app:layout_constraintStart_toEndOf="@+id/textViewTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/gametitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>